public class HtmlButton implements Button {
    public void render() {
        System.out.println("HTML Button");
    }
}
