public class WindowsButton implements Button {
    public void render() {
        System.out.println("Windows Button");
    }
}
